force-app/main/default/objects/AIFeedback__c/AIFeedback__c.object-meta.xml
<CustomObject>
    <description>Captures user feedback on a specific AI response, linked to both the message and its parent conversation, used to evaluate and improve Agent and Prompt Template performance over time.</description>
    <label>AI Feedback</label>
    <nameField>
        <displayFormat>AI Feedback - {000000}</displayFormat>
        <label>AI Feedback Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>👍 AI Feedback</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>