force-app/main/default/objects/AIFeedback__c/fields/AIConversation__c.field-meta.xml
<CustomField>
    <fullName>AIConversation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The conversation this feedback relates to.</description>
    <inlineHelpText>Populated automatically from the message being rated, for convenient reporting at the conversation level.</inlineHelpText>
    <label>AI Conversation</label>
    <referenceTo>AIConversation__c</referenceTo>
    <relationshipLabel>AI Feedbacks</relationshipLabel>
    <relationshipName>AIFeedbacks</relationshipName>
    <type>Lookup</type>
</CustomField>