force-app/main/default/objects/AIFeedback__c/fields/AIConversationMessage__c.field-meta.xml
<CustomField>
    <fullName>AIConversationMessage__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The specific AI response this feedback is about.</description>
    <inlineHelpText>Links feedback to the exact response being rated, rather than the conversation as a whole.</inlineHelpText>
    <label>AI Conversation Message</label>
    <referenceTo>AIConversationMessage__c</referenceTo>
    <relationshipLabel>AI Feedbacks</relationshipLabel>
    <relationshipName>AIFeedbacks</relationshipName>
    <type>Lookup</type>
</CustomField>