force-app/main/default/objects/AIFeedback__c/fields/Comment__c.field-meta.xml
<CustomField>
    <fullName>Comment__c</fullName>
    <description>Free-text detail explaining the rating.</description>
    <inlineHelpText>Add any additional detail on what was or wasn&apos;t helpful about this response.</inlineHelpText>
    <label>Comment</label>
    <type>TextArea</type>
</CustomField>