force-app/main/default/objects/AIFeedback__c/fields/Rating__c.field-meta.xml
<CustomField>
    <fullName>Rating__c</fullName>
    <description>The user&apos;s overall assessment of this response.</description>
    <inlineHelpText>Select whether this response was helpful or not.</inlineHelpText>
    <label>Rating</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Helpful</fullName>
            </value>
            <value>
                <fullName>Not Helpful</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>