force-app/main/default/objects/AIFeedback__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Rating__c</columns>
    <columns>AIConversation__c</columns>
    <columns>AIConversationMessage__c</columns>
    <columns>Comment__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>